Some styling fixes

--- a/index.html
+++ b/index.html
@@ -23,34 +23,32 @@
       /* You may write styles inside this <style> tag or within `css/style.css`. */
     </style>
   </head>
-  <body class="px-4 flex justify-center">
+  <body>
     <!-- Add your site or application content here -->
 
     <!-- Interior
       Top 5 Living Room Inspirations
       Curated vibrants colors for your living, make it pop & calm in the same time.
       Read more -->
-    <div class="bg-white rounded-md mt-20 w-80">
+    <div class="bg-white flex flex-col mt-[120px] w-[340px] mx-auto rounded-md">
       <img
         class="w-full rounded-t-md"
         src="./img/spacejoy-YqFz7UMm8qE-unsplash.jpg"
       />
-      <div class="p-4">
+      <div class="flex flex-col gap-2 p-2">
         <div
-          class="bg-green-50 text-green-700 w-fit p-2 rounded-full border border-green-200 my-2"
+          class="bg-green-50 text-green-700 w-fit p-2 rounded-full border border-green-200"
         >
           Interior
         </div>
-        <h1 class="my-2 text-lg text-neutral-900 font-bold">
+        <h1 class="text-lg text-neutral-900 font-bold">
           Top 5 Living Room Inspirations
         </h1>
-        <p class="text-base text-neutral-600 my-2">
+        <p class="text-base text-neutral-600">
           Curated vibrants colors for your living, make it pop & calm in the
           same time.
         </p>
-        <button
-          class="text-indigo-700 flex items-center gap-2 cursor-pointer my-2"
-        >
+        <button class="text-indigo-700 flex items-center gap-2 cursor-pointer">
           Read more
           <svg
             xmlns="http://www.w3.org/2000/svg"
