--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       Top 5 Living Room Inspirations
       Curated vibrants colors for your living, make it pop & calm in the same time.
       Read more -->
-    <div class="bg-white flex flex-col mt-[120px] w-[340px] mx-auto rounded-md">
+    <div class="bg-white mt-[120px] w-[340px] mx-auto rounded-md">
       <img
-        class="w-full rounded-t-md"
+        class="w-full rounded-t-md h-[288px] object-cover"
         src="./img/spacejoy-YqFz7UMm8qE-unsplash.jpg"
       />
       <div class="flex flex-col gap-2 p-2">
